<resources>
    <string name="app_name">Robot Pi</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="escolha_empresa">Escolha sua empresa</string>
    <string name="digite_telefone">Digite seu telefone</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="botao_logar">Logar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="digite_nome">Digite o seu nome</string>
    <string name="digite_cep">Digite o CEP de sua empresa</string>
    <string name="botao_cadastrar">Cadastrar</string>

    <!-- TODO: Remove or change this placeholder text ADICIONAR ACITVITIES E STRINGS -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comando">ComandoActivity</string>
    <string name="title_activity_raspberry">RaspberryActivity</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
